Added benchmarking (highly experimental)